--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Altuğ Meriç ESENDEMİR</title>
 
     <!-- normalize css -->
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="normalize.css">
     <!-- normalize css -->
 
     <!-- style css -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- style css -->
 
     <!-- boxicons link -->
@@ -71,7 +71,7 @@
                     <h1 class="my-name">Altuğ Meriç ESENDEMİR</h1>
                 </div>
                 <div class="photo-box">
-                    <img src="https://picsum.photos/200/300" alt="Photo 2">
+                    <img src="./img/me.JPG" alt="Photo 2">
                 </div>
                 <div class="photo-box job-box">
                     <h2>PORTFOLIO</h2>
@@ -92,14 +92,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-1.JPG" alt="">
+                    <img src="./img/photo-1.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">dogukan</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -107,14 +107,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-2.JPG" alt="">
+                    <img src="./img/photo-2.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">skater</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -122,14 +122,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-3.JPG" alt="">
+                    <img src="./img/photo-3.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">helin</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -137,14 +137,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-4.JPG" alt="">
+                    <img src="./img/photo-4.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">beyza</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -152,14 +152,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-5.JPG" alt="">
+                    <img src="./img/photo-5.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">beyza</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -167,14 +167,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-6.JPG" alt="">
+                    <img src="./img/photo-6.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">emir</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -182,14 +182,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-7.JPG" alt="">
+                    <img src="./img/photo-7.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">beyza</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -197,14 +197,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-8.JPG" alt="">
+                    <img src="./img/photo-8.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">sebnem</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -212,14 +212,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-9.JPG" alt="">
+                    <img src="./img/photo-9.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">sebnem</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -227,14 +227,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-10.JPG" alt="">
+                    <img src="./img/photo-10.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">sebnem</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -242,14 +242,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-11.JPG" alt="">
+                    <img src="./img/photo-11.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">sebnem</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -257,14 +257,14 @@
 
             <div class="blog-box">
                 <div class="blog-img">
-                    <img src="/img/photo-12.JPG" alt="">
+                    <img src="./img/photo-12.JPG" alt="">
                     <div class="text-top-left">mericesndmr</div>
                     <div class="text-bottom-right">yagmur</div>
                 </div>
 
                 <div class="blog-in">
                     <div class="creator">
-                        <img src="/img/me.JPG" alt="">
+                        <img src="./img/me.JPG" alt="">
                         <div class="creator-name">@mericesndmr</div>
                     </div>
                 </div>
@@ -281,11 +281,11 @@
     <section class="about-container" id="about-me">
         <div class="about-top">
             <h2 class="a-top-top" >A LITTLE <br> ABOUT ME</h2>
-            <img src="/img/me-3.JPG" alt="" class="a-top-bottom">
+            <img src="./img/me-3.JPG" alt="" class="a-top-bottom">
         </div>
         <div class="about-bottom">
             <p class="a-bottom-top">I am a digital nomad currently <br> based in Hong Kong. I've been <br> working in graphic design for the <br> past ten years. It was only in the <br> past three that I decided to focus <br> full-time on illustrating.</p>
-            <img src="/img/me-4.JPG" alt="" class="a-bottom-bottom">
+            <img src="./img/me-4.JPG" alt="" class="a-bottom-bottom">
         </div>
     </section>
     <!-- ------------- ALL ABOUT CODE ----------- -->
@@ -318,7 +318,7 @@
             </div>
         </div>
         <div class="with-me-right">
-            <img src="/img/me-2.JPG" alt="">
+            <img src="./img/me-2.JPG" alt="">
         </div>
     </section> -->
      <!-- ------------- ALL WITH ME CODE ----------- -->
@@ -330,7 +330,7 @@
     <!-- scroll button code -->
 
     <!-- js code -->
-    <script src="/js/script.js"></script>
+    <script src="script.js"></script>
     <!-- js code -->
 
 </body>
