--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 
      <!-- ------------- ALL WITH ME CODE ----------- -->
-     <!-- <section class="with-me-container" id="work-with-me">
+     <section class="with-me-container" id="work-with-me">
         <div class="with-me-left">
             <div class="with-me-t">
                 <p>Altuğ Meriç Esendemir</p>
@@ -320,7 +320,7 @@
         <div class="with-me-right">
             <img src="./img/me-2.JPG" alt="">
         </div>
-    </section> -->
+    </section>
      <!-- ------------- ALL WITH ME CODE ----------- -->
 
 
